src/pseudos/_tooltip.scss
// tooltip
//
// @group Pseudos
&[data-tooltip] {
	overflow: visible;
	&:before {
		content: attr(data-tooltip);
		white-space: nowrap;
		pointer-events: none;
		display: block;
		overflow: hidden;
		z-index: 15;
		position: absolute;
		// vertical-align: bottom;
		color: color(light);
		padding: 0 0.5rem;
		text-align: center;
		font-size: 0.7rem;
		opacity: 0;
		border-radius: 0.5rem;
		font-weight: weight();
		box-shadow: 3px 3px 9px color(dark, 0.3);
		box-sizing: content-box;
		border: 2px solid color(light, 0.1);
		background: color(dark);
	}
	&:hover:not([disabled]:not([disabled="false"])):not(.is--routeExact):not(.is--open):not([class*="toggle--"].only--active.is--active) {
		@media (hover: hover) {
			// dektop only

			cursor: pointer;
			&:before {
				opacity: 1;
			}
		}
	}

	// tooltip bgColor
	//
	// @group PseudoModifiers
	&[data-tooltip-bg="light"]:before {
		color: color(dark, 0.7);
	}
	&[data-tooltip-bg="lightAlt"]:before {
		color: color(primaryAlt);
		background: color(light);
	}
	&[data-tooltip-bg="secondaryAlt"]:before {
		background: color(secondary);
	}
	@each $name, $color in $colors {
		&[data-tooltip-bg="#{$name}"]:before {
			background: color($name);
		}
	}

	// tooltip text behavior
	//
	// @group PseudoModifiers
	&[data-tooltip-text]:before {
		max-width: 40ch;
	}
	//default text behavior
	&:not([data-tooltip-text]):before {
		white-space: nowrap;
		text-transform: capitalize;
	}

	// tooltip position
	//
	// @group PseudoModifiers
	// top position
	&[data-tooltip-top="left"],
	&[data-tooltip-p="top-left"] {
		&:before {
			top: 0;
			left: 0;
			transform: translateY(calc(-100% - 0.5em));
		}
	}
	&[data-tooltip-top="right"],
	&[data-tooltip-p="top-right"] {
		&:before {
			top: 0;
			right: 0;
			transform: translateY(calc(-100% - 0.5em));
		}
	}
	&[data-tooltip-top],
	&[data-tooltip-p="top"],
	&[data-tooltip-position="top"] {
		&:before {
			top: 0;
			left: 50%;
			transform: translate(-50%, calc(-100% - 0.5em));
		}
	}

	// right position
	&[data-tooltip-right="top"],
	&[data-tooltip-p="right-top"] {
		&:before {
			top: 0;
			right: 0;
			transform: translateX(calc(100% + 0.5em));
		}
	}
	&[data-tooltip-right="bottom"],
	&[data-tooltip-p="right-bottom"] {
		&:before {
			bottom: 0;
			right: 0;
			transform: translateX(calc(100% + 0.5em));
		}
	}
	&[data-tooltip-right],
	&[data-tooltip-p="right"],
	&[data-tooltip-position="right"] {
		&:before {
			top: 50%;
			right: 0;
			transform: translate(calc(100% + 0.5em), -50%);
		}
	}

	// left position
	&[data-tooltip-left="top"],
	&[data-tooltip-p="left-top"] {
		&:before {
			top: 0;
			left: 0;
			transform: translateX(calc(-100% - 0.5em));
		}
	}
	&[data-tooltip-left="bottom"],
	&[data-tooltip-p="left-bottom"] {
		&:before {
			bottom: 0;
			left: 0;
			transform: translateX(calc(-100% - 0.5em));
		}
	}
	&[data-tooltip-left],
	&[data-tooltip-p="left"],
	&[data-tooltip-position="left"] {
		&:before {
			top: 50%;
			left: 0;
			transform: translate(calc(-100% - 0.5em), -50%);
		}
	}

	// bottom position
	&[data-tooltip-bottom="left"],
	&[data-tooltip-p="bottom-left"] {
		&:before {
			bottom: 0;
			left: 0;
			transform: translateY(calc(100% + 0.5em));
		}
	}
	&[data-tooltip-bottom="right"],
	&[data-tooltip-p="bottom-right"] {
		&:before {
			bottom: 0;
			right: 0;
			transform: translateY(calc(100% + 0.5em));
		}
	}
	// default value
	&[data-tooltip-bottom],
	&[data-tooltip-p="bottom"],
	&[data-tooltip-position="bottom"],
	&:not([data-tooltip-position]):not([data-tooltip-p]):not([data-tooltip-bottom]):not([data-tooltip-top]):not([data-tooltip-left]):not([data-tooltip-right]) {
		&:before {
			bottom: 0;
			left: 50%;
			transform: translate(-50%, calc(100% + 0.5em));
		}
	}
}

